# Tiny-Orchestra

./: .gitignore  README.md  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/desktop/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.test.tsx  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: ARCH.md  CODEX-TASKS.md  PRD.md
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/tests/: welcome.spec.ts
scripts/: check-binaries.mjs
