[package]
name = "tiny_orchestra_desktop"
version = "0.1.0"
description = "Tiny Orchestra desktop shell"
authors = ["Tiny Orchestra Contributors"]
edition = "2021"

[lib]
name = "tiny_orchestra_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
